<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/receiver_info"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/example_full_name"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/example_email_address"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <RadioButton
            android:id="@+id/rbMpesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:padding="10dp"
            android:text="@string/button_to_mpesa" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/example_phone_number"
            android:inputType="phone"
            android:padding="10dp" />

        <RadioButton
            android:id="@+id/rbBank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:padding="10dp"
            android:text="@string/button_to_account" />

        <Spinner
            android:id="@+id/spBanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/example_account_number"
            android:inputType="text"
            android:padding="10dp"
            />


        <Button
            android:id="@+id/btSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:background="#FF6600"
            android:padding="10dp"
            android:text="@string/button_continue"
            android:textColor="@android:color/background_light" />


    </LinearLayout>

</ScrollView>